--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <title>抠脚少女</title>
   </head>
   <body>
-    <p align="center">< img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2528930183,3048035967&fm=27&gp=0.jpg"></p ><!--图片居中-->
-    
-
-    
-
-    <p>
+    <p align="center">< img src="https://koujiaoshaonv.github.io/1.jpg">
+    </p>
       <table border="1">
   <tr>
     <th>表头</th>
