--- a/index.html
+++ b/index.html
@@ -1,45 +1,115 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>抠脚少女</title>
-  </head>
-  <body>
-    <p align="center"><img src="https://koujiaoshaonv.github.io/1.jpg"></p>
-      <table border="1">
-  <tr>
-    <th>表头</th>
-    <th>表头</th>
-    <th>表头</th>
-    <th>表头</th>
-    <th>表头</th>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>11</td>
-    <td>12</td>
-  </tr>
-  <tr>
-    <th colspan="2">9</th> 
-    <td>6</td>
-    <th rowspan="2">28</th> 
-    <td>14</td>
-  </tr>
-  <tr>
-    <td>7</td>
-    <td>8</td>
-    <td>9</td>
-    <td>16</td>
-  </tr>
-   <tr>
-    <td>17</td>
-    <td>18</td>
-    <td>19</td>
-    <td>20</td>
-    <td>21</td>
-  </tr>
+<!doctype html> 
+<html> 
+    <meta charset="utf-8"> 
+    <title>他的每一个故事都是一封情书</title> 
+    <meta name="keywords" content="宫崎骏">
+    <meat name="description"动漫20content="宫崎骏，1941年1月5日出生于东京都文京区，日本动画家、动画制作人、漫画家、动画导演、动画编剧"">
+  </head> 
+  <body> 
+     <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">一位伟大的艺术家</span></p>
+      <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">一位童心未泯的老人家</span></p>
+        <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">他为我们塑造了一个又一个经典的动漫</span></p>
+          <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">他，是宫崎骏</span></p>
+
+    <p align="center"><img src="https://koujiaoshaonv.github.io
+/桃子/1.jpg"></p>
+    <br>
+    <HR  style="FILTER:  progid:DXImageTransform.Microsoft.Shadow(color:#987cb9,direction:145,strength:15)"  width="80%" color=#987cb9 SIZE=1>
+    <br>
+    <table> 
+  <tr> 
+     <td><p><p align="left"> <span style="color:#6c530f;">宫崎骏，1941年1月5日出生于东京都文京区</span> </p> </p> 
+       <p><p align="left"> <span style="color:#6c530f;">日本动画家、动画制作人、漫画家、动画导演、动画编剧</span> </p> </p>
+    <p><p align="left"> <span style="color:#6c530f;">他于1963年进入东映动画公司，从事动画师工作</span> </p> </p>
+   <p><p align="left"> <span style="color:#6c530f;"> 1971年加入手冢治虫成立“虫Production动画部”。</span> </p> </p> 
+    <p><p align="left"> <span style="color:#6c530f;"> 1982年开始创作独立漫画</span> </p> </p>
+    <p><p align="left"> <span style="color:#6c530f;"> 1984年执导《风之谷》，获得罗马奇幻电影节最佳动画短片奖</span> </p> </p></td>
+      <td><img src=" http://koujiaoshaonv.github.io
+/桃子/2.jpg"width="400" height="250"></p></td>  
+      <td><img src=" http://koujiaoshaonv.github.io
+/桃子/3.jpg"width="400" height="250"></p></td> 
+       </tr> 
 </table>
-</p >
-  </body>
+<br>
+<HR  style="FILTER:  progid:DXImageTransform.Microsoft.Shadow(color:#987cb9,direction:145,strength:15)"  width="80%" color=#987cb9 SIZE=1>
+<p><br  /></p></section><section class="_135editor" style="border: 0px;box-sizing: border-box;" data-role="paragraph"></section><section class="_135editor" style="border: 0px;box-sizing: border-box;" data-role="paragraph"><p style="text-align: center;"><span style="color: #632423;font-size: 13px;">说起宫崎骏相信大家都熟悉</span></p>
+  <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">他塑造了一个又一个可爱的银幕形象</span></p><p style="text-align: center;"><span style="color: #E36C09;font-size: 13px;">无脸男、波妞、阿莉埃蒂</span></p>
+  <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">他的动漫作品不知道你们有没有欣赏过呢？</span></p><p style="text-align: center;"><span style="color: #632423;font-size: 13px;">没有的话也不打紧</span></p>
+  <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">小编这就为你们介绍介绍</span></p>
+  <br>
+
+  <HR style="FILTER: progid:DXImageTransform.Microsoft.Glow(color=#987cb9,strength=10)" width="80%" color=#987cb9 SIZE=1>
+  <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="80%" color=#987cb9 SIZE=10>
+
+  <b><p style="text-align: center;"><span style="color: #E36C09;font-size: 14px;">1.千与千寻</span></p></b>
+  <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">我不知道离别的滋味是这样凄凉，</span></p>
+  <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">我不知道说声再见是这么的凄凉。</span></p>
+   <p align="center"><img src="http://koujiaoshaonv.github.io
+/桃子/4.jpg"width="400" height="250"></p>
+   <br>
+
+<b><p style="text-align: center;"><span style="color: #E36C09;font-size: 14px;">2.哈尔的移动城堡</span></p></b>
+   <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">苏菲你的头发像被星星染过一样，</span></p>
+   <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">好漂亮。</span></p>
+   <p align="center"><img src=" https://koujiaoshaonv.github.io
+/桃子/5.jpeg"width="400" height="250"></p>
+   <br>
+
+   <b><p style="text-align: center;"><span style="color: #E36C09;font-size: 14px;">3.龙猫</span></p></b>
+    <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">好像在做梦！</span></p>
+   <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">可是不是梦！</span></p>
+   <p align="center"><img src=" http://koujiaoshaonv.github.io
+/桃子/6.JPG"width="400" height="250"></p>
+   <br>
+
+   <b><p style="text-align: center;"><span style="color: #E36C09;font-size: 14px;">4.悬崖上的金鱼姬</span></p></b>
+    <p style="text-align: center;"><span style="color: #7F7F7F;font-size: 14px;">波妞喜欢宗介</span></p>
+   <p align="center"><img src=" http://koujiaoshaonv.github.io
+/桃子/7jpg.jpg"width="400" height="250"></p>
+   <br>
+
+    <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="80%" color=#987cb9 SIZE=10>
+    <HR style="FILTER: progid:DXImageTransform.Microsoft.Glow(color=#987cb9,strength=10)" width="80%" color=#987cb9 SIZE=1>
+
+    <br>
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">以上四部作品不知道你们都有没有看过呢？</span></p>
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">当然，宫崎骏爷爷的作品远不止这些</span></p>
+   <p style="text-align: center;"><span style="color: #E36C09;font-size: 13px;">《哈尔的移动城堡》、《幽灵公主》</span><span style="color: #632423;font-size: 13px;">等等</span></p>
+
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">也都是经典之作</span></p><p style="text-align: center;"><span style="color: #632423;font-size: 13px;">每一部都值得我们欣赏</span></p>
+
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">而他的作品也深深的得到很多人的赞赏和认可</span></p>
+   <br>
+
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">有人说，宫崎骏带给了他们整个童年</span></p>
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">有人说，宫崎骏带给了他们许多的感动</span></p>
+   <p style="text-align: center;"><span style="color: #632423;font-size: 13px;">也有人说，最想去的地方是宫崎骏的动画世界</span></p>
+   <p><br  /></p>
+   <p style="text-align: center;"><strong><span style="color: #632423;font-size: 15px;">而你，也和他们一样吗？</span></strong></p>
+   <br>
+   <br>
+   <br>
+   <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="80%" color=#987cb9 SIZE=3>
+    <b><p style="text-align: left;"><span style="color: #632423;font-size: 13px;">
+
+
+ <table> 
+  <tr> 
+    <td>如果你想了解更多，可以拨打我的电话，或者发邮件联系我</span></p></b>
+      <b><p style="text-align: left;"><span style="color: #632423;font-size: 13px;">手机号码</span></p></b>
+      <a href="tel:18300118335">18300118335</a>
+    <br>
+<b><p style="text-align: left;"><strong><span style="color: #632423;font-size: 15px;">我的邮箱</span></strong></p></b>
+<a href="1648399116@qq.com">1648199116@qq.com</a>
+<br>
+<br>
+<a href="https://j.map.baidu.com/jVneO" target="_blank">顺德职业技术学院</a>
+<p align="center"><img src=" https://koujiaoshaonv.github.io
+/222.JPG "width="400" height="250"></p>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+<div style="position:fixed;bottom:100px;right:5px;opacity:1;cursor:pointer;"><a href="#"><span style="font-size:60px"><i class="fas fa-bomb"></i></a></div></span>
+  </body> 
+ 
 </html>
+
